did some minor polishing, added spacing to side of main text, fixed banner font on electronics and media studies pages, added picture to electronics page along with extra main text, and fixed boldening of page titles

--- a/CSS/asss2.css
+++ b/CSS/asss2.css
@@ -1,5 +1,15 @@
 body{background-image: url(../Images/pakurang.jpg)}
 
+.floatright {
+	float: right}
+
+.textmargin1
+
+{
+	font-family: 'Source Sans Pro', sans-serif;
+	padding: 20px
+}
+
 
 #banner {
 	height: 90px;
